# adaptive-attention

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  EXPERIMENTS_AND_TRAINING_DOCUMENTATION.md  README.md  app.py  autoencoder_160M.sh  autoencoder_160M_continual.sh  autoencoder_160M_continual_mini.sh  autoencoder_160M_continual_suffix.sh  autoencoder_160M_predictor_mini.sh  dev-setup.sh  extract_highlights.py  generate_dyck.py  generate_shuffle_dyck.py  generate_with_key.py  modular_arithmetic_dataset.py  pyproject.toml  run_160M.sh  run_all_160M_continual.sh  run_joyce_joint.sh  setup-env.sh  setup.py  test-train.sh  test_compression_recurrent.py  test_pretokenized_loading.py  train_joyce_joint.py  train_visual_compressor.py  transformer_160M.sh  transformer_160M_continual.sh  transformer_160M_continual_mini.sh  visualize_compression_attention.py
.github/: pull_request_template.md
.github/workflows/: lint.yml
benchmarks/modules/: benchmark_tokenshift.py
controller_ckpt/: model.safetensors
controller_ckpt_debug_smoke/: model.safetensors
debug/memory/step_000200/: decoded.txt
debug/memory/step_000400/: decoded.txt
debug/memory/step_000600/: decoded.txt
debug/memory/step_000800/: decoded.txt
debug/memory/step_001000/: decoded.txt
experiments/: README.md  test_huggingface_dataset_loading.py
experiments/attention_analysis/: README.md  visualize_permutation_attention.py
experiments/attention_analysis/visualizations/: attention_scores.json
experiments/digit_lookup/: README.md
experiments/hashhop/: README.md  memory_340M_hashhop.slurm  run_hashhop_eval.slurm
experiments/hashhop/scripts/: analyze_hashhop_routing.py  create_hashhop_1hop_training.py  create_hashhop_1hop_training_parquet.py  create_hashhop_eval.py  create_hashhop_training_dataset.py  eval_hashhop_example.py  run_hashhop_eval.py  test_hashhop_tokenization.py
experiments/ioi/: debug_few_shot.py
experiments/memory_ablation/: README.md
experiments/memory_ablation/key_activations/: memory_1layer_200_key_activations.json  memory_1layer_2K_no_mlp_key_activations.json
experiments/memory_ablation/scripts/: analyze_ablation_by_position.py  analyze_ablation_swap_correlation.py  swap_memory_keys.py
experiments/memory_routing/: README.md
experiments/memory_routing/scripts/: analyze_gsm8k_routing.py  calculate_active_parameters.py  convert_memory_mlp_router.py
experiments/mqar/: README.md
experiments/sorting/: README.md
experiments/synthetic_evals/: eval_piqa.py
experiments/synthetic_qa/: README.md
experiments/two_hop/: README.md
experiments/utils/scripts/: calculate_active_parameters.py  debug_memory_checkpoint_loading.py  explain_statistics.py  fix_and_analyze_json.py  plot_loss_comparison.py
fla/layers/: attn.py  upsample.py
fla/layers/prev/: joyce.py
fla/models/autoencoder/: configuration_autoencoder.py  modeling_autoencoder.py
fla/models/transformer/: configuration_transformer.py
joyce/: app.py  eval_visual_compressor.py  extract_highlights_quick.py  generate_summaries.py  joyce_pretrain.py  run_compressor_only_finetune.py  run_joyce_joint.sh  test_compression_recurrent.py  test_compression_recurrent_baseline.py  train_compressor.py  train_controller.py
llmonade/: config_manager.py  data.py  train.py
llmonade/components/: checkpoint.py
llmonade/configs/: llmon.toml
llmonade/configs/autoencoder/: autoencoder_160m.json  autoencoder_160m_12l.json  autoencoder_160m_continual.json  autoencoder_160m_continual_mini.json  (+2 more)
llmonade/evals/: harness.py
llmonade/models/: __init__.py  activation_offloading.py  joyce_pretrain.py  parallelize_bento.py  pipeline_bento.py
llmonade/scripts/: generate_delta_curves.py  run_joyce_joint_340M.sh  run_joyce_pretrain_160M.sh  run_joyce_pretrain_340M.sh  run_transformer_340m.sh  train_joyce_pretrain.py  train_ratio_controller.py
llmonade/tests/: test_joyce_autoencoder.py
llmonade/tools/: utils.py
llmonade/utils/: __init__.py  token_subset.py
utils/: dataset_download.py  inspect_sft.py  prepare_clevr.py  reshard.py
(+230 files in other folders)
