[project]
name = "llmonade"
dynamic = ["version"]
description = "A training framework for scaling models."
readme = "README.md"
authors = [
    { name = "Dhruv Pai", email = "dhruv@tilderesearch.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10,<3.12"
dependencies = [
    "setuptools>=68",
    "torch>=2.7.0",
    "torchdata",
    "transformers==4.52.2",
    "triton==3.3.0",
    "datasets==3.4.1",
    "einops",
    "ninja",
    "wandb",
    "tiktoken",
    "tensorboard",
    "wheel>=0.45.1",
    "causal-conv1d @ git+https://github.com/Dao-AILab/causal-conv1d.git@v1.5.0.post8",
    "flash-attn==2.7.3",
    "rich>=14.0.0",
    "matplotlib>=3.10.1",
    "seaborn>=0.13.2",
    "lm-eval[ruler]",
    "spacy>=3.8.5",
    "imageio>=2.37.0",
    "pillow>=11.2.1",
    "pandas>=2.0.0",
    "pyarrow>=10.0.0",
    "tyro>=0.9.23",
    "torchao",
    "bento",
    "torchtitan",
    "popcorn",
    "poetry>=2.1.3",
]

[project.urls]
Homepage = "https://github.com/tilde-research/llmonade"

[tool.uv]
no-build-isolation-package = ["causal-conv1d", "flash-attn"]

[build-system]
requires = ["setuptools>=45", "wheel", "ninja", "torch"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.1",
    "pytest"
]

[tool.isort]
line_length = 127
multi_line_output = 3

[tool.uv.sources]
popcorn = { path = "3rdparty/bento/popcorn", editable = true }
bento = { path = "3rdparty/bento", editable = true }
lm-eval = { path = "3rdparty/lm-evaluation-harness", editable = true }
torchtitan = { path = "3rdparty/toast", editable = true }

[tool.poetry]
version = "0.1.0"
