[project]
name = "llmonade"
dynamic = ["version"]
description = "A training framework for scaling models."
readme = "README.md"
authors = [
    { name = "Dhruv Pai", email = "dhruv@tilderesearch.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "setuptools>=68",
    "torch>=2.6.0,<2.7.0",
    "torchdata",
    "transformers>=4.53.0",
    "triton==3.2.0",
    "datasets==3.4.1",
    "einops",
    "ninja",
    "wandb",
    "tiktoken",
    "tensorboard",
    "wheel>=0.45.1",
    "flash-attn==2.6.3",
    "rich>=14.0.0",
    "matplotlib>=3.10.1",
    "seaborn>=0.13.2",
    "spacy>=3.8.5",
    "imageio>=2.37.0",
    "pillow>=11.2.1",
    "pandas>=2.0.0",
    "pyarrow>=10.0.0",
    "tyro>=0.9.23",
    "torchao",
    "bento",
    "torchtitan",
    "poetry>=2.1.3",
    "openai>=1.0.0",
    "tqdm>=4.65.0",
    "fastapi==0.115.*",
    "uvicorn[standard]==0.30.*",
    "transformers>=4.45.0",
    "einops>=0.7",
    "numpy>=1.24",
    "lm-eval",
]

[project.urls]
Homepage = "https://github.com/tilde-research/llmonade"

[tool.uv]

[build-system]
requires = ["setuptools>=45", "wheel", "ninja", "torch"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.1",
    "pytest"
]
evals = [
    "lm-eval",  # Install separately: pip install -e 3rdparty/lm-evaluation-harness
]

[tool.isort]
line_length = 127
multi_line_output = 3

[tool.uv.sources]
# Use prebuilt flash-attn wheel (saves ~10 min build time)
flash-attn = { url = "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.3.14/flash_attn-2.6.3%2Bcu124torch2.6-cp311-cp311-linux_x86_64.whl" }
bento = { workspace = true, editable = true }
lm-eval = { workspace = true, editable = true }
torchtitan = { workspace = true, editable = true }

[tool.uv.workspace]
members = [
    "3rdparty/bento",
    "3rdparty/torchtitan",
    "3rdparty/lm-evaluation-harness",
]

[tool.poetry]
version = "0.1.0"
